migrate node-manager hooks to node-controller
